[gd_scene load_steps=5 format=3 uid="uid://c21cxagqion13"]

[ext_resource type="Script" path="res://Screens/pause_menu.gd" id="1_dyaef"]
[ext_resource type="AudioStream" uid="uid://dslu3bcl2y3ux" path="res://audio/UI/button_click.wav" id="2_hq06p"]

[sub_resource type="SystemFont" id="SystemFont_mpw5p"]
font_names = PackedStringArray("RBNo3.1")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_h1hhx"]
font = SubResource("SystemFont_mpw5p")
font_size = 71
font_color = Color(0.855469, 0, 0, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)
shadow_size = 31
shadow_color = Color(0, 0, 0, 0.627451)

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dyaef")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -210.0
offset_top = -119.5
offset_right = 210.0
offset_bottom = 119.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Pause Menu"
label_settings = SubResource("LabelSettings_h1hhx")
horizontal_alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Button_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_hq06p")
volume_db = -10.0

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
